--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,31 +4,54 @@
   "private": true,
   "proxy": "http://localhost:10010",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.2",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.0",
+    "@mui/styles": "^5.15.0",
+    "@mui/x-data-grid": "^6.19.0",
+    "@react-pdf/renderer": "^3.0.0",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/crypto-js": "^4.2.2",
-    "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.17.19",
-    "@types/node": "^16.18.126",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "antd": "^5.26.2",
-    "axios": "^1.10.0",
-    "crypto-js": "^4.2.0",
-    "idb-keyval": "^6.2.2",
+    "@types/crypto-js": "^4.1.0",
+    "@types/lodash": "^4.14.202",
+    "@types/pako": "^2.0.3",
+    "@types/qrcode": "^1.5.5",
+    "antd": "^5.11.5",
+    "class-transformer": "^0.5.1",
+    "compressing": "^1.10.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "crypto-js": "^4.1.1",
+    "date-fns": "^3.6.0",
+    "element-react": "^1.4.34",
+    "element-theme-default": "^1.4.13",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "file-loader": "^6.2.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "idb-keyval": "^6.2.1",
+    "js-base64": "^3.7.5",
+    "jsonfile": "^6.1.0",
     "lodash": "^4.17.21",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
+    "madge": "^7.0.0",
+    "minio": "^7.1.3",
+    "moment": "^2.30.1",
+    "pako": "^2.1.0",
+    "path-browserify": "^1.0.1",
+    "pinyin": "^4.0.0-alpha.0",
+    "prettier": "^2.3.2",
+    "qrcode": "^1.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "zustand": "^5.0.6"
+    "redux-persist": "^6.0.0",
+    "reflect-metadata": "^0.1.13",
+    "slash": "^5.1.0",
+    "terser-webpack-plugin": "^5.1.4",
+    "web-vitals": "^5.0.3",
+    "zustand": "^3.5.13"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,6 +78,40 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@reduxjs/toolkit": "^1.6.1",
+    "@types/fs-extra": "^11.0.4",
+    "@types/qrcode.react": "^1.0.1",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vercel/webpack-asset-relocator-loader": "1.6.0",
+    "axios": "^1.7.2",
+    "css-loader": "^6.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.1",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.1",
+    "node-loader": "^2.0.0",
+    "qrcode.react": "^3.1.0",
+    "react-refresh": "^0.14.0",
+    "react-refresh-typescript": "^2.0.9",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^7.6.3",
+    "react-star-ratings": "^2.3.0",
+    "style-loader": "^3.0.0",
+    "ts-loader": "^9.2.2",
+    "typescript": "^4.0.2",
+    "xlsx": "^0.17.0"
   }
 }
