--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@reduxjs/toolkit": "^1.6.1",
+    "@testing-library/dom": "^10.4.0",
     "@types/fs-extra": "^11.0.4",
     "@types/qrcode.react": "^1.0.1",
     "@types/react": "^18.0.5",
