--- a/UserService/src/resources/application.conf
+++ b/UserService/src/resources/application.conf
@@ -11,3 +11,17 @@ th = {
   numThreads = 10
 }
 
+# Quill 数据库配置
+db {
+  connectionPool = "HikariCP"
+  dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
+  properties = {
+    serverName = "localhost"
+    portNumber = "5432"
+    databaseName = "tongwen"
+    user = "db"
+    password = "root"
+  }
+  numThreads = 10
+}
+
